fixed webkits, scrollbars, removed loading

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -12,20 +12,22 @@ p {
 
 ::-webkit-scrollbar {
 	width: 1px;
-	scroll-behavior: smooth;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
 	background: #f1f1f1c9;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
 	background: #888;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
 	background: #555;
+}
+
+html {
+	scroll-behavior: smooth;
+	scrollbar-width: thin;
+	scrollbar-color: #888 #f1f1f1c9;
 }
